--- a/Style.css
+++ b/Style.css
@@ -23,10 +23,10 @@ div.category{
 
 div.content{
     background-color: white;
-    margin: 40px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 340px;
-    box-shadow: 0px 0px 30px 2px rgb(0, 0, 0, 0.4);
+    margin: 40px 4% 80px 4%;
+    padding: 0px 8px 30px 9px;
+    /*min-width: 340px;*/
+    box-shadow: 0px 0px 10px 2px rgb(0, 0, 0, 0.4);
     overflow: visible;
 }
 
@@ -143,4 +143,42 @@ table.table2 td{
 
 table.table2 tr{
     height: 40px;
+}
+
+@media only screen and (min-width: 768px){
+    div.content{
+        margin: 40px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 340px;
+    }
+
+}
+
+@media only screen and (max-width: 768px){
+    .table{
+        position: absolute;
+        bottom: 0;
+        background-color: #6c829dc0;
+        color: white;
+        width: 100%;
+        height: 50px;
+    }
+
+    .table td{
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .table th{
+        text-align: center;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (min-width: 900px){
+    div.content{
+        margin-left: auto;
+        margin-right: auto;
+        width: 633px;
+    }
 }
